Update to Carrier based StringTemplates